fix --show-composited-layer-borders on Mac

Fix GPU process crash due to incorrect glLineWidth value on Mac.

BUG=662682

R=piman
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2482673002
Cr-Commit-Position: refs/heads/master@{#431102}

Former-commit-id: d5e3696056f67a01e595bc7c62b9270052deb1f2